fix overlap bug and escape bug / improve perf

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ canvas{
     border: 1px solid black;
     background: #333;
     display:block;
+    height: 640px;
+    width: 980px;
     /*opacity: 0;*/
 /*    transform: perspective(20em) rotateX(30deg);*/
 }
